# OOP

./: .gitignore  README.md  SUMMARY_2025.md  TEST_REPORT.md  check_db.py  client.py  commit.bat  full_test.bat  git ls-remote origin  git ls-remote origin.pub  git_commit.bat  quick_test.py  rebuild_and_test.bat  report_generator.py  requirements.txt  reset_and_seed.ps1  run_all.ps1  run_frontend.bat  run_test.bat  start.bat  start.ps1  start_all.bat  start_backend.bat  start_backend.py  start_servers.py  test.bat  test_integration.py  test_new_endpoints.py  update_weather.py  weather_service.py
backend/: CMakeLists.txt  CMakePresets.json  config.json  vcpkg.json
backend/data/: app.db  app.db-shm
backend/debug/: project_files.txt
backend/include/controllers/: CargoController.h  CompaniesController.h  CrewController.h  LogsController.h  OopDemoController.h  PeopleController.h  PortsController.h  SchedulesController.h  ShipTypesController.h  ShipsController.h  VoyageRecordsController.h  WeatherController.h
backend/include/db/: Db.h
backend/include/domain/: Engineer.h  Person.h  Port.h  Profession.h  Researcher.h  ShipDomain.h  Soldier.h
backend/include/models/: Cargo.h  Company.h  CrewAssignment.h  Person.h  Port.h  Schedule.h  Ship.h  ShipType.h  VoyageExpense.h  VoyageRecord.h  WeatherData.h
backend/include/repos/: CargoRepo.h  CompaniesRepo.h  CrewRepo.h  PeopleRepo.h  PortsRepo.h  SchedulesRepo.h  ShipTypesRepo.h  ShipsRepo.h  VoyageExpensesRepo.h  VoyageRecordsRepo.h  WeatherDataRepo.h
backend/public/: index.html
backend/src/: main.cpp
backend/src/controllers/: CargoController.cpp  CompaniesController.cpp  CrewController.cpp  LogsController.cpp  OopDemoController.cpp  PeopleController.cpp  PortsController.cpp  SchedulesController.cpp  ShipTypesController.cpp  ShipsController.cpp  VoyageRecordsController.cpp  WeatherController.cpp
backend/src/db/: Db.cpp
backend/src/repos/: CargoRepo.cpp  CompaniesRepo.cpp  CrewRepo.cpp  PeopleRepo.cpp  PortsRepo.cpp  SchedulesRepo.cpp  ShipTypesRepo.cpp  ShipsRepo.cpp  VoyageExpensesRepo.cpp  VoyageRecordsRepo.cpp  WeatherDataRepo.cpp
backend/tests/: CompaniesRepoTests.cpp  CrewRepoTests.cpp  PeopleRepoTests.cpp  PortsRepoTests.cpp  ShipTypesRepoTests.cpp  ShipsRepoTests.cpp  TestHelpers.h
backup_before_cleanup/debug/: project_dump.txt  rest_dump.json
backup_before_cleanup/logs/: db_snapshot.json  project_dump.txt
frontend/: common.py  fleet_manager.py  run_all.ps1
frontend/pages/: 2_Ship_Management.py  3_Crew_&_People.py  4_Company_Management.py  5_Admin_Data.py  6_Logs_&_Analytics.py
pages/: 10_🌤️_Погода.py  11_💰_Фінанси.py  7_📦_Управління_Вантажами.py  8_🛳️_Історія_Подорожей.py  9_📅_Розклади.py
